--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,18 @@
-title: Elian Marsault
-#logo:
-#description:
-#show download:
+title: Elian Marsault  # Add a space after the period
+
+logo: 1.png # Use a relative path to logo image 
+
+description: Student in Data analysis and Economis # Fix hyphenation 
+
+show_downloads: true # Fix spelling
+
 theme: jekyll-theme-minimal 
+
+plugins:
+  - jekyll-seo-tag # Add SEO plugin
+
+google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk" # Verify ownership through Search Console  
+
+email: elian.marsault@gmail.com
+phone number: +33651834037
+# Allow visitors to contact you
