--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ plugins:
 
 google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk" # Verify ownership through Search Console  
 
-email: elian.marsault@gmail.com
+email: <a href='mailto:elian.marsault@gmail.com'>elian.marsault@gmail.com
 phone number: +33651834037
 # Allow visitors to contact you
