--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Elian Marsault  # Add a space after the period
 
 logo: 1.png # Use a relative path to logo image 
 
-description: Student in Data analysis and Economis # Fix hyphenation 
+description: Student in Data analysis and Economis
 
 show_downloads: true # Fix spelling
 
@@ -13,6 +13,6 @@ plugins:
 
 google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk" # Verify ownership through Search Console  
 
-email: <a href='mailto:elian.marsault@gmail.com'>elian.marsault@gmail.com
-phone number: +33651834037
+📧 email: elian.marsault@gmail.com
+📞 phone number: +33651834037
 # Allow visitors to contact you
