--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,10 @@ google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk" # Verify
 📧 email: elian.marsault@gmail.com
 📞 phone number: +33651834037
 # Allow visitors to contact you
+
+Skills:
+<p align="center">
+  <a href="https://skillicons.dev">
+    <img src="https://skillicons.dev/icons?i=mysql,py,pytorch,pycharm,r,tensorflow&theme=light" />
+  </a>
+</p>
