--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: Elian Marsault  # Add a space after the period
+title: Elian Marsault  
 
 logo: 1.png # Use a relative path to logo image 
 
 description: Student in Data analysis and Economis
+
+📧 **Email**: [elian.marsault@gmail.com](mailto:elian.marsault@gmail.com)  
+📞 **Phone**: +33 6 51 83 40 37
 
 show_downloads: true # Fix spelling
 
@@ -11,10 +14,6 @@ theme: jekyll-theme-minimal
 plugins:
   - jekyll-seo-tag # Add SEO plugin
 
-📧 **Email**: [elian.marsault@gmail.com](mailto:elian.marsault@gmail.com)  
-📞 **Phone**: +33 6 51 83 40 37
-
 google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk" # Verify ownership through Search Console  
 
-# Allow visitors to contact you
 
