--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ logo: 1.png # Use a relative path to logo image
 
 description: Student in Data analysis and Economis
 
-📧 **Email**: [elian.marsault@gmail.com](mailto:elian.marsault@gmail.com)  
-📞 **Phone**: +33 6 51 83 40 37
+📧 Email: [elian.marsault@gmail.com](mailto:elian.marsault@gmail.com)  
+📞 Phone: +33 6 51 83 40 37
 
 show_downloads: true # Fix spelling
 
