--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Elian Marsault"
 
-logo: "1.png"  # Relative path to logo image
+logo: "1.png"
 
 description: "Student in Data analysis and Economics"
 
@@ -8,8 +8,7 @@ show_downloads: true
 
 theme: jekyll-theme-minimal
 
-plugins:
-  - jekyll-seo-tag
+plugins: jekyll-seo-tag
 
 google_site_verification: "nE-yBDoWCj5TcTXXNcRBPPiJZxpC6pw5dEdeRo6kTCk"
 
