--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Elian Marsault"
 
-<img src="1.png" alt="Elian Marsault" style="border-radius: 50%; width: 150px; height: 150px;">
+logo: "1.jpg"
 
 description: "Student in Data analysis and Economics"
 
