--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "Elian Marsault"
 
 logo: "1.jpg"
 
-description: "Student in Data analysis and Economics"
+description: "Master student in Data analysis and Economics"
 
 email: "elian.marsault@gmail.com"
 phone: "+33 6 51 83 40 37"
